<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewState"
            type="com.example.qaotomation.viewstate.BoutiqueItemViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewItem"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:maxHeight="160dp"
            tools:src="@drawable/trendyol_logo"
            app:imageUrl="@{viewState.imageUrl}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageViewItem"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@{viewState.title}"
            tools:text="Trendyol" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="13sp"
            android:text="@{viewState.caption}"
            tools:text="This is a sample caption." />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
