...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ItemListingFragment">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:focusable="false"
            android:clickable="false"
            android:layout_margin="8dp"
...
