<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="12dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:layout_margin="12dp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/textViewEmail"
            app:layout_constraintBottom_toTopOf="@id/textViewPassword"
            app:layout_constraintStart_toStartOf="@id/textViewEmail"/>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:layout_constraintStart_toStartOf="@id/editTextEmail"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            app:layout_constraintTop_toBottomOf="@id/textViewPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/textViewRePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="@id/editTextPassword"
            android:text="@string/retype_password"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_password"
            app:layout_constraintTop_toBottomOf="@id/textViewRePassword"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPassword"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignupUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/editTextRePassword"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/signup"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>